--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -6,10 +6,10 @@ footer {
 }
 
 footer .info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   color: #fcfcfc;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 footer .info label {
@@ -98,5 +98,11 @@ footer .social {
 
   .copyright {
     padding: 15px 15px 87px 15px;
+  }
+
+  footer .info {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
