--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,7 +1,7 @@
 .swiper {
   position: relative;
   width: 100%;
-  height: 90%;
+  height: 80%;
   padding: 5px 20px;
 }
 
@@ -47,7 +47,7 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 80%;
-  padding: 20px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -141,20 +141,30 @@
 }
 
 @media screen and (max-width: 720px) {
+  .swiper {
+    height: 95vh;
+  }
+
   .swiper .swiper__content {
     width: 80%;
     height: 60%;
+    top: 38%;
+    padding: 20px;
   }
+
   .swiper .content {
     row-gap: 20px;
   }
+
   .swiper .content__contact {
     font-size: 12px;
     margin: 0;
   }
+
   .swiper .content__welcome {
     font-size: 16px;
   }
+
   .swiper .content__name {
     font-size: 48px;
     font-weight: 900;
@@ -162,10 +172,12 @@
     text-transform: uppercase;
     transition: all 0.5s ease;
   }
+
   .swiper .content__dev {
     font-weight: 300;
     font-size: 15px;
   }
+
   .swiper .bxs-caret-right-circle,
   .bxs-caret-left-circle {
     font-size: 28px;
