--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -47,7 +47,7 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 80%;
-  padding: 30px;
+  padding: 50px 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,30 +114,30 @@
 }
 
 .swiper .content__contact {
+  display: flex;
+  align-items: center;
   font-family: 'Poppins', sans-serif;
-  color: #ffffff !important;
-  font-size: 13px;
+  border: 2px solid #000000;
+  background-color: white;
   font-weight: 600;
-  padding: 12px 30px;
-  border: 1.5px solid #ffffff;
-  border-radius: 18px;
-  background-color: #000000;
-  box-shadow: 0px 0px 25px rgb(0 0 0 / 18%);
-  margin: 8px auto;
+  font-size: 14px;
+  padding: 10px 20px;
+  color: #000000 !important;
+  border-radius: 8px;
+  cursor: pointer;
   transition: all 0.5s ease;
-  text-transform: uppercase;
 }
 
 .swiper .content__contact:hover {
+  background-color: black;
+  color: white !important;
+  border: 2px solid #ffffff;
   box-shadow: -1px 4px 20px -6px rgb(0 0 0 / 75%);
 }
 
-.swiper__content .content .contact__icon {
-  margin-left: 5px;
-  color: white;
+.contact__icon {
   font-size: 16px;
-  margin-bottom: 2px;
-  transition: all 0.5s ease;
+  margin: 0 0 0 5px;
 }
 
 @media screen and (max-width: 720px) {
