--- a/src/pages/about_me/styles.css
+++ b/src/pages/about_me/styles.css
@@ -25,11 +25,18 @@ section {
   color: rgb(0, 0, 0);
 }
 
+.container__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .img-fluid {
   border-radius: 20px;
   background-color: rgb(0, 0, 0 / 70%);
   backdrop-filter: saturate() blur(10px);
   box-shadow: 0px 0px 25px rgb(0 0 0 / 18%);
+  aspect-ratio: 1 / 1;
 }
 
 .skills-content {
