--- a/src/pages/projects/styles.css
+++ b/src/pages/projects/styles.css
@@ -13,6 +13,7 @@
 
 .cardProjects {
   position: relative;
+  transition: all 0.8s ease-in-out;
   margin: 2rem 0;
 }
 
@@ -61,6 +62,7 @@
 .filter-buttons ul {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   list-style: none;
   text-align: center;
   padding: 0;
@@ -150,6 +152,11 @@
   border-radius: 15px;
   background-color: #333;
   bottom: 0px;
+}
+
+.overlay p {
+  text-transform: uppercase;
+  text-align: center;
 }
 
 @media only screen and (max-width: 795px) {
